# KBLens

./: .gitignore  AGENTS.md  LICENSE  PRODUCT_IMPROVEMENT_PLAN_zh.md  README.md  README_zh.md  confluence_crawler.py  kblens.example.yaml  pyproject.toml
skills/kblens-kb/: SKILL.md
src/kblens/: __init__.py  __main__.py  ast_extract.py  cli.py  config.py  doc_convert.py  models.py  packer.py  progress.py  scanner.py  section_extract.py  server.py  summarizer.py  writer.py
src/kblens/agent_skills/: __init__.py  install.py  registry.py
src/kblens/resources/skills/: __init__.py
src/kblens/resources/skills/kblens-kb/: SKILL.md  __init__.py
tests/: test_cli_add_kb.py  test_config_extensions.py  test_csharp_extract.py  test_doc_assets.py  test_incremental_hashing.py
