[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kblens"
version = "0.2.9"
description = "Progressive-disclosure code knowledge base generator for large codebases"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "KBLens Contributors"}]
keywords = ["code-analysis", "knowledge-base", "llm", "tree-sitter", "cpp", "python", "typescript", "javascript", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
    "litellm>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/disrei/KBLens"
Repository = "https://github.com/disrei/KBLens"
Issues = "https://github.com/disrei/KBLens/issues"

[project.scripts]
kblens = "kblens.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kblens = ["resources/skills/kblens-kb/SKILL.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
